force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Objeto de faturas destinado a armazenar as informações históricas do cliente.</description>
    <label>Faturamento</label>
    <nameField>
        <label>Mês de Referência</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>