force-app/main/default/objects/Invoice__c/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <label>Data da criação</label>
    <type>Date</type>
</CustomField>