force-app/main/default/objects/Invoice__c/fields/CustomerInteraction__c.field-meta.xml
<CustomField>
    <fullName>CustomerInteraction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocolo</label>
    <referenceTo>vlocity_cmt__CustomerInteraction__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Protocolo</relationshipName>
    <type>Lookup</type>
</CustomField>