force-app/main/default/objects/Invoice__c/fields/Downloadurl__c.field-meta.xml
<CustomField>
    <fullName>Downloadurl__c</fullName>
    <label>Download url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>