force-app/main/default/objects/Invoice__c/fields/FixedAmount__c.field-meta.xml
<CustomField>
    <fullName>FixedAmount__c</fullName>
    <formula>FixedSiebel__c +  FixedRollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>