force-app/main/default/objects/Invoice__c/fields/FixedRollup__c.field-meta.xml
<CustomField>
    <fullName>FixedRollup__c</fullName>
    <description>Campo de sumarização dos itens da fatura para Fixa em valor de fixa.</description>
    <label>Fixa</label>
    <summarizedField>InvoiceItem__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceItem__c.Type__c</field>
        <operation>equals</operation>
        <value>Fixa, TV, Internet</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>