force-app/main/default/objects/Invoice__c/fields/FixedSiebel__c.field-meta.xml
<CustomField>
    <fullName>FixedSiebel__c</fullName>
    <formula>IF ((FixedSiebelRollup__c  = 0),TotalAmount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixa Siebel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>