force-app/main/default/objects/Invoice__c/fields/FixedSiebelRollup__c.field-meta.xml
<CustomField>
    <fullName>FixedSiebelRollup__c</fullName>
    <description>Campo de sumarização dos itens da fatura para TV em fixa.</description>
    <label>Fixa Siebel</label>
    <summarizedField>InvoiceItem__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceItem__c.ItemSumaryId__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>