force-app/main/default/objects/Invoice__c/fields/InvoiceContestedStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceContestedStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status da Fatura Contestada</label>
    <type>Checkbox</type>
</CustomField>