force-app/main/default/objects/Invoice__c/fields/InvoiceContestedStatusForm__c.field-meta.xml
<CustomField>
    <fullName>InvoiceContestedStatusForm__c</fullName>
    <description>Status da Fatura Contestada/Normal</description>
    <formula>IF ( InvoiceContestedStatus__c,
IMAGE( &quot;/resource/InvoicePaidStatus/AlertIcon.png&quot;, &quot;Contestada&quot;, 20, 20 ) &amp; &quot; Contestada&quot;,
IMAGE( &quot;/resource/InvoicePaidStatus/Pago.png&quot;, &quot;Normal&quot;, 20, 20 ) &amp; &quot; Normal&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status da Fatura Contestada/Normal</inlineHelpText>
    <label>Status da Fatura</label>
    <type>Text</type>
</CustomField>