force-app/main/default/objects/Invoice__c/fields/InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceId__c</fullName>
    <description>Identificador da fatura na 4P.</description>
    <externalId>true</externalId>
    <label>Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>