force-app/main/default/objects/Invoice__c/fields/InvoiceType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceType__c</fullName>
    <description>Campo criado para registrar os tipos de fatura e inserir a cor desejada pelo cliente.</description>
    <label>Tipo do Faturamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixa</fullName>
                <color>#3333FF</color>
                <label>Fixa</label>
            </value>
            <value>
                <fullName>Celular</fullName>
                <color>#6600CC</color>
                <label>Celular</label>
            </value>
            <value>
                <fullName>Internet</fullName>
                <color>#3333FF</color>
                <label>Internet</label>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>