force-app/main/default/objects/Invoice__c/fields/MobileAmount__c.field-meta.xml
<CustomField>
    <fullName>MobileAmount__c</fullName>
    <formula>MobileRollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Móvel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>