force-app/main/default/objects/Invoice__c/fields/MobileRollup__c.field-meta.xml
<CustomField>
    <fullName>MobileRollup__c</fullName>
    <description>Campo para sumarizar os itens da fatura em móvel.</description>
    <label>Móvel</label>
    <summarizedField>InvoiceItem__c.Value__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceItem__c.Type__c</field>
        <operation>equals</operation>
        <value>Celular</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>