force-app/main/default/objects/Invoice__c/fields/NextInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>NextInvoiceDate__c</fullName>
    <label>Data da próxima fatura</label>
    <type>Date</type>
</CustomField>