force-app/main/default/objects/Invoice__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>Data do Pagamento</label>
    <type>Date</type>
</CustomField>