force-app/main/default/objects/Invoice__c/fields/PaymentStatusForm__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatusForm__c</fullName>
    <formula>IF( ISPICKVAL( PaymentStatus__c, "Paid" ) = true, IMAGE( "/resource/InvoicePaidStatus/Pago.png", "Pago", 18, 18 ) &amp; " Pago",
IF( ISPICKVAL( PaymentStatus__c, "Unpaid" ) = true, IMAGE( "/resource/InvoicePaidStatus/Naopago.png", "Naopago", 18, 18 ) &amp; " Não Pago", null ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status do Pagamento</label>
    <type>Text</type>
</CustomField>