force-app/main/default/objects/Invoice__c/fields/SecondaryDownloadUrl__c.field-meta.xml
<CustomField>
    <fullName>SecondaryDownloadUrl__c</fullName>
    <label>Download url secundária</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>