force-app/main/default/objects/Invoice__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data Início</label>
    <type>Date</type>
</CustomField>