force-app/main/default/objects/Invoice__c/fields/TaxInclude__c.field-meta.xml
<CustomField>
    <fullName>TaxInclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taxa inclusa</label>
    <type>Checkbox</type>
</CustomField>