force-app/main/default/objects/Invoice__c/fields/URLDownloadFatura__c.field-meta.xml
<CustomField>
    <fullName>URLDownloadFatura__c</fullName>
    <label>Download da fatura</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>