force-app/main/default/objects/Invoice__c/recordTypes/Convergente.recordType-meta.xml
<RecordType>
    <fullName>Convergente</fullName>
    <active>true</active>
    <label>Convergente</label>
</RecordType>