force-app/main/default/objects/Invoice__c/recordTypes/Fixa.recordType-meta.xml
<RecordType>
    <fullName>Fixa</fullName>
    <active>true</active>
    <label>Fixa</label>
</RecordType>