force-app/main/default/objects/Invoice__c/recordTypes/Movel.recordType-meta.xml
<RecordType>
    <fullName>Movel</fullName>
    <active>true</active>
    <label>Móvel</label>
</RecordType>